tests/paczka1/small_fuzzy/14138404.err
Error in line 1: FpN9y S851 26,7
Error in line 14: VMjcx S851 201,3
Error in line 6: FpN9y A48 18,8
